# pytest-diff-selector

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Readme.md  pyproject.toml  requierments.txt  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
pytest_diff_selector/: main.py
tests/: conftest.py  test_cmd.py  test_integration.py
