[metadata]
name = pytest-diff-selector
description = Get tests affected by code changes (using git)
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/fruch/pytest-diff-selector
author = Israel Fruchter
author_email = israel.fruchter@gmail.com,
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent

project_urls =
    Source = https://github.com/fruch/pytest-diff-selector
    Tracker = https://github.com/fruch/pytest-diff-selector/issues

keywords = pytest, git

[options]
zip_safe = False
packages = find:
platforms = any
install_requires =
    unidiff
    pyan3 == 1.2.0
    tqdm

include_package_data = True
python_requires = >=3.7
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    selector = pytest_diff_selector.main:main

[options.extras_require]
test =
    pytest >= 6.2.2
    pytest-git
    pre-commit
    pytest-cov

all =
    %(test)s
